// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary for multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $5.00
  </p>
</div>
`;

exports[`should render ExpensesSummary for one expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.00
  </p>
</div>
`;
